// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders a label with an icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "flexDirection": "row",
        "gap": 2,
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "#f7f7f7",
      },
    ]
  }
>
  <PlatformIcon
    androidIconName="layers"
    color="#7c7c7c"
    iosIconName="square.stack.3d.up.fill"
    size={12}
  />
  <Text
    style={
      [
        {
          "fontSize": 12,
          "marginLeft": 2,
        },
        {
          "color": "#7c7c7c",
        },
      ]
    }
  >
    4B
  </Text>
</View>
`;

exports[`Tag renders a label without an icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "flexDirection": "row",
        "gap": 2,
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "#f7f7f7",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "marginLeft": 2,
        },
        {
          "color": "#7c7c7c",
        },
      ]
    }
  >
    Multilingual
  </Text>
</View>
`;

exports[`Tag renders no icon when only one platform icon name is provided 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "flexDirection": "row",
        "gap": 2,
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "#f7f7f7",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "marginLeft": 2,
        },
        {
          "color": "#7c7c7c",
        },
      ]
    }
  >
    2.5 GB
  </Text>
</View>
`;

exports[`Tag renders the High CPU usage label in yellow with a yellow background 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "flexDirection": "row",
        "gap": 2,
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "rgba(230, 184, 0, 0.15)",
      },
    ]
  }
>
  <PlatformIcon
    androidIconName="memory"
    color="#e6b800"
    iosIconName="cpu"
    size={12}
  />
  <Text
    style={
      [
        {
          "fontSize": 12,
          "marginLeft": 2,
        },
        {
          "color": "#e6b800",
        },
      ]
    }
  >
    High CPU usage
  </Text>
</View>
`;
